--- a/TestContainer/TestContainer/TestContainer.csproj
+++ b/TestContainer/TestContainer/TestContainer.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
   </ItemGroup>
 </Project>
