--- a/TestContainer/TestContainer.Android/TestContainer.Android.csproj
+++ b/TestContainer/TestContainer.Android/TestContainer.Android.csproj
@@ -66,6 +66,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CustomImageView.cs" />
     <Compile Include="ZoomScrollViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\p3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\attrs.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
